--- a/style.css
+++ b/style.css
@@ -28,6 +28,88 @@ body {
   border: 3px solid #fff;
 }
 .card {
+  position: relative;
   background: #fff;
   border-radius: 20px;
+  margin: 20px 0;
+  width: 280px;
+}
+.card::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 40%;
+  background: #7d2ae8;
+  border-radius: 20px 20px 0 0;
+}
+.card-content {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 30px;
+  z-index: 100;
+}
+.media-icons {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.media-icons i {
+  color: #fff;
+  margin-top: 10px;
+  opacity: 0.6;
+  transition: 0.3s;
+  cursor: pointer;
+}
+.media-icons i:hover {
+  opacity: 1;
+}
+.name-profession {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 10px;
+  color: #333;
+}
+.name {
+  font-size: 20px;
+  font-weight: 600;
+}
+.profession {
+  font-size: 15px;
+  font-weight: 500;
+}
+.rating {
+  display: flex;
+  align-items: center;
+  margin-top: 18px;
+}
+.rating i {
+  font-size: 18px;
+  margin: 0 2px;
+  color: #7d2ae8;
+}
+.buttons {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  margin-top: 20px;
+}
+.buttons button {
+  background: #7d2ae8;
+  outline: none;
+  border: none;
+  color: #fff;
+  padding: 8px 22px;
+  border-radius: 20px;
+  font-size: 14px;
+  transition: 0.3s;
+  cursor: pointer;
+}
+.buttons button:hover {
+  background: #6616d0;
 }
