--- a/style.css
+++ b/style.css
@@ -13,6 +13,9 @@ body {
   align-items: center;
   background: #f2f2f2;
 }
+.swiper {
+  width: 950px;
+}
 .image {
   width: 140px;
   height: 140px;
